--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,4 +7,17 @@ h1 {
     padding: 1.5% 0 0 2%;
 }
 
-.content
+
+/* landing page buttons */
+.showContent {
+
+}
+
+/* github, linkedin, email */
+.connect {
+
+}
+
+figcaption {
+    
+}
