added icons for resume, updated bootstrap for skills and landing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,11 @@ h1 {
 
 
 /* landing page buttons */
-.showContent {
+.showContentBtn {
+    
+}
+
+.showContentBtn :hover {
 
 }
 
@@ -19,5 +23,9 @@ h1 {
 }
 
 figcaption {
+
+}
+
+footer {
     
 }
