--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,9 @@
-html, body { 
-    margin: 0; 
-    padding: 0; 
-    outline: 0; 
-}
-
 body {
     background-image: url("../images/landingbg.jpg");
     background-repeat: no-repeat;
     background-size: cover;    
     font-family: 'Roboto', sans-serif;
+    overflow: hidden;
 }
 
 h1 {
@@ -40,7 +35,7 @@ h1 {
 }
 
 .content {
-    margin-bottom: 2%;
+    margin-bottom: 1%;
 }
 
 .card-header, .card-title {
@@ -110,9 +105,9 @@ footer {
 }
 
 .form-control:focus {
-        border-color: rgba(40, 167, 69, 0.25);
-        box-shadow: 0 0 0 0.2rem rgb(23,162,184);
-    } 
+    border-color: rgba(40, 167, 69, 0.25);
+    box-shadow: 0 0 0 0.2rem rgb(23,162,184);
+} 
 
 .connectIcon {
     color: black;
@@ -126,3 +121,11 @@ footer {
     color:rgb(23,162,184);
 }
 
+#resume {
+    height: 80vh;
+    width: 100%;
+}
+
+#resumeCardText {
+    background-color:
+}
