--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,12 @@
 body {
-    background-image: url("../images/landingbg.jpg");
+    /* background-image: url("../images/landingbg.jpg");
     background-repeat: no-repeat;
-    background-size: cover;    
+    background-size: cover;     */
     font-family: 'Roboto', sans-serif;
-    overflow: hidden;
+    /* overflow: hidden; */
+    background-color: black;
+    padding-top: 70px;
+    overflow: auto;
 }
 
 h1 {
@@ -142,32 +145,3 @@ footer {
     border-radius: 15px;
 }
 
-
-.chevron {
-    display:inline-block;
-    width: .5em;
-    height: .8em;
-    position:relative;
-}
-.chevron:before,
-.chevron:after {
-    display:block;
-    content:"";
-    width:0;
-    height:0em;
-    border-style:solid;
-    position:absolute;
-}
-.chevron:before {
-    right:0;
-    border-width:.4em 0 .4em .4em;
-    border-color:transparent transparent transparent red;    
-}
-.chevron:after {
-    left:0;
-    border-width:.4em 0 .4em .4em;
-    border-color:transparent transparent transparent #fff;    
-}
-.chevron.fat {
-    width:.6em;
-}
